[package]
name = "tree-sitter-autoconf"
description = "Tree-sitter grammar for GNU Autoconf"
version = "0.1.0"
authors = ["Raven Hallsby <raven@hallsby.com>"]
license = "LGPL-3.0-or-later"
readme = "README.md"
keywords = ["incremental", "parsing", "tree-sitter", "autoconf"]
categories = ["parser-implementations", "parsing", "text-editors"]
repository = "https://github.com/ravenjoad/tree-sitter-autoconf"
edition = "2021"
autoexamples = false

build = "bindings/rust/build.rs"
include = [
  "bindings/rust/*",
  "grammar.js",
  "queries/*",
  "src/*",
  "tree-sitter.json",
  "LICENSE",
]

[lib]
path = "bindings/rust/lib.rs"

[dependencies]
tree-sitter-language = "0.1"

[build-dependencies]
cc = "1.2"

[dev-dependencies]
tree-sitter = "0.25.3"
