[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "tree-sitter-autoconf"
description = "Tree-sitter grammar for GNU Autoconf"
version = "0.1.0"
keywords = ["incremental", "parsing", "tree-sitter", "autoconf"]
classifiers = [
  "Intended Audience :: Developers",
  "Topic :: Software Development :: Compilers",
  "Topic :: Text Processing :: Linguistic",
  "Typing :: Typed",
]
authors = [{ name = "Raven Hallsby", email = "raven@hallsby.com" }]
requires-python = ">=3.10"
license.text = "LGPL-3.0-or-later"
readme = "README.md"

[project.urls]
Homepage = "https://github.com/ravenjoad/tree-sitter-autoconf"

[project.optional-dependencies]
core = ["tree-sitter~=0.24"]

[tool.cibuildwheel]
build = "cp310-*"
build-frontend = "build"
